/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2021-05-07 11:22 UTC+0300 Alexander Kresin <alex@belacy.ru>
  + contrib/gthwg/gt_hwgui_l.c
    * Linux GTK version of GTHWG has been added
  * contrib/gthwg/gt_hwg.ch
  * contrib/gthwg/gt_hwg.prg
  * contrib/gthwg/gt_hwgui_w.c
    * Headers updated.
  * contrib/gthwg.hbp
  * contrib/makefile.linux
    * Make files for Linux GTK version updated

2021-05-06 13:38 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * contrib/gthwg/gt_hwg.prg
    * hb_gt_gui() and hb_gt_gui_default() added to prevent gtgui to be default for mingw.
  * contrib/gthwg/gt_hwgui_w.c
    * Small changes.
  * include/guilib.ch
    * "dev" added to version number till a new build

2021-05-05 19:00 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * source/gtk/hcwindow.prg
    * ANNOUNCE HB_GTSYS line deleted, because it isn't correct in fact and
      create problems while linking sometimes. HB_GT_TRM() empty function added instead
      for to not be forced to link gttrm.

2021-04-28 09:28 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * include/guilib.ch
    * HwGUI version is changed to 2.23 build 1
  * whatsnew.txt
    * Updated for v2.23 build 1

2021-04-26 21:17 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * include/windows.ch
    ! Small fix

2021-04-26 15:54 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  + contrib/gthwg.hbp
  * contrib/makefile.bc
  * contrib/makefile.gcc
  * contrib/Readme.txt
    * Build files and readme has been updated due to GTHWG.

2021-04-26 14:15 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  + contrib/gthwg
  + contrib/gthwg/gt_hwg.ch
  + contrib/gthwg/gt_hwg.prg
  + contrib/gthwg/gt_hwgui_w.c
  + contrib/gthwg/tests
  + contrib/gthwg/tests/test1.prg
    * gthwg - a new GT library, based on HwGUI, added.
  * contrib/make_b32.bat